# c-core

./: .gitignore  CMakeLists.txt  README.md  test-runner.sh
src/: README.md  dict.c  dict.h  pico-repl.c  pounce.c  pounce.h  queue.c  repl.c  run.c  stack.c  stack.h  stack.tests  stack.tests.c  tests.c
src/cmp/: controller.c  pico-controller.c
src/hal/: gpio.h  pico-gpio.c
src/hal/led/: WS2812.c  WS2812.h
src/hardware/: pico-hal.c
src/repl/: pico-history.c  pico-repl.c  repl.c
tests/: all-tests.p  binrec-test.p  concat-test.p  crouch-test.p  dip-test.p  dip2-test.p  drop-test.p  dup-test-1.p  dup-test-2.p  dup-test-3.p  dup-test.p  filter-test.p  if-else-test.p  map-test.p  minus-test.p  play-test.p  reverse-list.p  source.p  times-test.p  uncons-test.p
